Numberクラスを作成 (IntergerとRealはこれから派生する)

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -60,6 +60,7 @@ CPPFILES =  \
 			src/risseMethod.cpp                      \
 			src/risseNativeFunction.cpp              \
 			src/risseNativeProperty.cpp              \
+			src/risseNumberClass.cpp                 \
 			src/risseObject.cpp                      \
 			src/risseObjectBase.cpp                  \
 			src/risseObjectClass.cpp                 \
