Real クラスを実装 Number.isNaN をプロパティとして実装

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -69,6 +69,7 @@ CPPFILES =  \
 			src/risseOperateFlags.cpp                \
 			src/risseOperateRetValue.cpp             \
 			src/rissePrimitiveClass.cpp              \
+			src/risseRealClass.cpp                   \
 			src/risseScriptBlockBase.cpp             \
 			src/risseScriptEngine.cpp                \
 			src/risseStaticStrings.cpp               \
