. のあとや function property var の後に予約語や演算子名をおけるように
static_strings.rb が words.txt も見に行くように

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -119,8 +119,10 @@ BIN_DEPS += src/risseStaticStringsData.inc src/risseStaticStringsIds.inc
 
 src/risseStaticStringsData.inc src/risseStaticStringsIds.inc: \
 		src/risseStaticString.txt \
+		src/risse_parser/words.txt \
 		tools/static_strings.rb Makefile
 	ruby tools/static_strings.rb src/risseStaticString.txt \
+		src/risse_parser/words.txt \
 		src/risseStaticStringsIds.inc src/risseStaticStringsData.inc
 
 # risseParser.cpp と risseParser.inc のコンパイル
