Module の定義をできるように Class.include 追加 Array.unshift Array.shift 追加
そのほか細かい修正

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -59,6 +59,7 @@ CPPFILES =  \
 			src/risseLexerUtils.cpp                  \
 			src/risseMemberAttribute.cpp             \
 			src/risseMethod.cpp                      \
+			src/risseModuleClass.cpp                 \
 			src/risseNativeFunction.cpp              \
 			src/risseNativeProperty.cpp              \
 			src/risseNumberClass.cpp                 \
