シングルトンインスタンスの構築時の依存関係の無限循環を解決するまえにいったんコミット

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -55,6 +55,7 @@ CPPFILES =  \
 			src/risseCoroutine.cpp                   \
 			src/risseException.cpp                   \
 			src/risseExceptionClass.cpp              \
+			src/risseFunctionClass.cpp               \
 			src/risseIntegerClass.cpp                \
 			src/risseLexerUtils.cpp                  \
 			src/risseMemberAttribute.cpp             \
