function 式(仮引数) { ... } の形式での関数宣言をできるように ( 「式」は代入可能でなくてはならなく、たとえば global.hoge のような式を指定して global.hoge という関数を宣言することができる )

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -134,6 +134,7 @@ BIN_DEPS += src/risse_parser/risseParser.inc
 
 src/risse_parser/risseParser.cpp src/risse_parser/risseParser.inc: \
 		src/risse_parser/risse.y Makefile
+	@echo Compiling src/risse_parser/risse.y
 	@(set -e ;\
 		cd src/risse_parser ;\
 		bison -dv --name-prefix=risse risse.y ;\
