--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -54,6 +54,7 @@ CPPFILES =  \
 			src/risseCodeExecutor.cpp                \
 			src/risseConfig.cpp                      \
 			src/risseCoroutine.cpp                   \
+			src/risseCoroutineClass.cpp              \
 			src/risseExceptionClass.cpp              \
 			src/risseFunctionClass.cpp               \
 			src/risseIntegerClass.cpp                \
