--- a/src/core/sound/Makefile
+++ b/src/core/sound/Makefile
@@ -31,6 +31,17 @@ CPPFILES=\
 		filter/reverb/fv_revmodel.cpp              \
 		filter/reverb/Reverb.cpp                   
 
+ifdef USE_SSE
+ CPPFILES += \
+		opt_sse/WaveFormatConverter_SSE.cpp \
+		filter/phasevocoder/opt_sse/PhaseVocoderDSP_SSE.cpp
+else
+ CPPFILES += \
+		opt_default/WaveFormatConverter_Default.cpp \
+		filter/phasevocoder/opt_default/PhaseVocoderDSP_Default.cpp
+endif
+
+
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
 #-----------------------------------------
