--- a/external/Makefile_common
+++ b/external/Makefile_common
@@ -1,47 +1,18 @@
-DOWNLOAD_ROOT=http://kikyou.info/tvp/build_libs
-DOWNLOADER=wget -nv
-
 default: all
 
 all: build_lib
 
 
-download_lib: download_completed
-
-download_completed: Makefile
-	$(DOWNLOADER) $(DOWNLOAD_ROOT)/$(DOWNLOAD_FILE)
-	touch download_completed
-
-extract_lib: extract_completed
-
-extract_completed: Makefile download_completed
-	mkdir src || true
-	@echo "extracting archive $(DOWNLOAD_FILE) ..."
-	@set -e; case $(DOWNLOAD_FILE) in                    \
-		*.tar.gz|*.tgz)                                  \
-			cd src ;                                     \
-			tar zxf ../$(DOWNLOAD_FILE) ;                \
-			cd .. ;                                      \
-			;;                                           \
-		*.tar.bz2|*.tbz)                                 \
-			cd src ;                                     \
-			tar jxf ../$(DOWNLOAD_FILE) ;                \
-			cd .. ;                                      \
-			;;                                           \
-	esac
-	touch extract_completed
-
-
 build_lib: build_completed
 
-build_completed: Makefile extract_completed
+build_completed: Makefile
 	./build.sh
 	touch build_completed
 
 distclean:
-	rm -f $(DOWNLOAD_FILE)* build_completed extract_completed download_completed
+	rm -f $(DOWNLOAD_FILE)* build_completed
 	for dir in *; do if [ -d "$$dir" ]; then rm -rf $$dir; fi; done
 
 clean:
-	rm -f $(DOWNLOAD_FILE)* extract_completed download_completed
+	rm -f $(DOWNLOAD_FILE)*
 	for dir in src; do if [ -d "$$dir" ]; then rm -rf $$dir; fi; done
