--- a/external/openal/Makefile
+++ b/external/openal/Makefile
@@ -1,11 +1,4 @@
-TOP_DIR=../..
-include $(TOP_DIR)/Makefile_platform
-
+DOWNLOAD_FILE=libogg-1.1.3.tar.gz
 
 include ../Makefile_common
 
-ifeq ($(PLATFORM),windows)
- DOWNLOAD_FILE=openal-bin-win32-20060312cvs.tar.bz2
-else
- DOWNLOAD_FILE="PLEASE UPDATE openal/Makefile to download your operating system's openal file!"
-endif
