--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -186,5 +186,18 @@ $(Risse_BIN_OUTPUT_DIR)/risse-config: Makefile risse-config.in src/risseUtils.d
 	chmod +x $(Risse_BIN_OUTPUT_DIR)/risse-config
 
 BIN_DEPS = $(Risse_BIN_OUTPUT_DIR)/risse-config
+
+#----------------------------#
+
+# ヘッダファイルを集めてコピーする
+RISSE_HEADER_FILES := $(wildcard src/*.h)
+RISSE_HEADER_DESTS := $(addprefix include/,$(notdir $(RISSE_HEADER_FILES)))
+
+include/% :: src/%
+	mkdir -p include
+	cp $< $@
+
+BIN_DEPS += $(Risse_BIN_OUTPUT_DIR)/risse-config $(RISSE_HEADER_DESTS)
+
 #----------------------------#
 include $(TOP_DIR)/Makefile_common
