--- a/src/core/Makefile_core_common
+++ b/src/core/Makefile_core_common
@@ -28,7 +28,7 @@ SUB_DIRS=\
 
 
 # このバイナリが依存しているライブラリ
-DEP_LIBS=BOOST BOOST_THREAD ZLIB WX LIBOGG LIBVORBIS OPENAL COMMON
+DEP_LIBS=BOOST BOOST_THREAD ZLIB WX LIBOGG LIBVORBIS OPENAL COMMON GC
 
 # 追加の CFLAGS
 CXXFLAGS += -DBOOST_ENABLE_ASSERT_HANDLER
