--- a/src/core/Makefile_core_common
+++ b/src/core/Makefile_core_common
@@ -7,16 +7,16 @@ include $(TOP_DIR)/Makefile_filenames
 SUBSYS_DIRS=\
 	$(CORE_DIR)/base/config        \
 	$(CORE_DIR)/base/cpu           \
-	$(CORE_DIR)/base/event         \
 	$(CORE_DIR)/base/exception     \
-	$(CORE_DIR)/base/fs            \
-	$(CORE_DIR)/base/log           \
 	$(CORE_DIR)/base/mathlib       \
-	$(CORE_DIR)/base/script        \
-	$(CORE_DIR)/base/system        \
 	$(CORE_DIR)/base/ui            \
 	$(CORE_DIR)/base/utils         \
-	$(CORE_DIR)/sound              
+	$(CORE_DIR)/base/event         \
+	$(CORE_DIR)/base/log           \
+#	$(CORE_DIR)/base/fs            \
+#	$(CORE_DIR)/base/script        \
+#	$(CORE_DIR)/base/system        \
+#	$(CORE_DIR)/sound              
 
 # makefile のあるサブディレクトリの定義
 # (順番に注意)
