--- a/src/core/Makefile_core_common
+++ b/src/core/Makefile_core_common
@@ -13,8 +13,8 @@ SUBSYS_DIRS=\
 	$(CORE_DIR)/base/utils         \
 	$(CORE_DIR)/base/event         \
 	$(CORE_DIR)/base/log           \
+	$(CORE_DIR)/base/script        \
 #	$(CORE_DIR)/base/fs            \
-#	$(CORE_DIR)/base/script        \
 #	$(CORE_DIR)/base/system        \
 #	$(CORE_DIR)/sound              
 
