--- a/src/core/base/script/Makefile
+++ b/src/core/base/script/Makefile
@@ -13,7 +13,7 @@ include $(CORE_DIR)/Makefile_core_subsys_pre
 #-----------------------------------------
 CPPFILES = \
 	RisseEngine.cpp                     \
-	TextStream.cpp
+#	TextStream.cpp
 
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
