wxWidgets が GC に依存するようになったので gc もリンクするように

--- a/src/tools/krkrrel/Makefile
+++ b/src/tools/krkrrel/Makefile
@@ -10,7 +10,7 @@ PROGRAM_ID=krkrrel
 BIN=$(BUILD_OUT_DIR)/bin/$(PROGRAM_ID)$(BIN_SUFFIX)
 
 # このバイナリが依存しているライブラリ
-DEP_LIBS=WX ZLIB LIBTOMCRYPT COMMON
+DEP_LIBS=WX ZLIB LIBTOMCRYPT COMMON GC
 
 # リンカに渡すフラグ
 LDFLAGS = -g $(CONSOLE_LDFLAGS)
