wxWidgets が GC に依存するようになったので gc もリンクするように
wx が 2.28 になって定数の名前を変えたので追従

--- a/src/tools/krkrfont/Makefile
+++ b/src/tools/krkrfont/Makefile
@@ -10,7 +10,7 @@ PROGRAM_ID=krkrfont
 BIN=$(BUILD_OUT_DIR)/bin/$(PROGRAM_ID)$(BIN_SUFFIX)
 
 # このバイナリが依存しているライブラリ
-DEP_LIBS=WX FREETYPE COMMON
+DEP_LIBS=WX FREETYPE COMMON GC
 
 # リンカに渡すフラグ
 LDFLAGS = -g $(GUI_LDFLAGS)
