ファイナライザ用のスレッドを立ち上げることにした。
ファイナライザ、つまるところ tRisseDestructee のサブクラスのデストラクタ、は、このスレッドからもっぱら呼ばれることになる (もちろんメインスレッドなどから呼ばれることもあるが、基本的に呼ばれるスレッドは不定であるということ )

--- a/src/core/Makefile_core_common
+++ b/src/core/Makefile_core_common
@@ -14,6 +14,7 @@ SUBSYS_DIRS=\
 	$(CORE_DIR)/base/event         \
 	$(CORE_DIR)/base/log           \
 	$(CORE_DIR)/base/script        \
+	$(CORE_DIR)/base/gc            \
 #	$(CORE_DIR)/base/fs            \
 #	$(CORE_DIR)/base/system        \
 #	$(CORE_DIR)/sound              
