tRisseSS 追加 ( tRisseString 型のスタティックな文字列を作ることが出来るテンプレート)
他のスタティックな文字列領域もこの実装を使うように

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -138,6 +138,15 @@ src/risseNativeBinderTemplates.inc: \
 		tools/create_binder.rb Makefile
 	ruby tools/create_binder.rb > src/risseNativeBinderTemplates.inc
 
+# risseStringTemplates.inc のコンパイル
+BIN_DEPS += src/risseStringTemplates.inc
+
+src/risseStringTemplates.inc: \
+		tools/create_ss_templates.rb Makefile
+	ruby tools/create_ss_templates.rb > src/risseStringTemplates.inc
+
+
+
 # risseParser.cpp と risseParser.inc のコンパイル
 BIN_DEPS += src/risse_parser/risseParser.inc
 
