Void クラスの基本的な機能を追加

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -85,6 +85,7 @@ CPPFILES =  \
 			src/risseThreadClass.cpp                 \
 			src/risseTypes.cpp                       \
 			src/risseVariant.cpp                     \
+			src/risseVoidClass.cpp                   \
 			src/risse_parser/risseLexer.cpp          \
 			src/risse_parser/risseRisseScriptBlockClass.cpp    \
 			src/risse_parser/risseParser.cpp         \
