--- a/src/core/base/event/Makefile
+++ b/src/core/base/event/Makefile
@@ -14,9 +14,9 @@ include $(CORE_DIR)/Makefile_core_subsys_pre
 CPPFILES=\
 	TickCount.cpp                  \
 	Event.cpp                      \
-	IdleEvent.cpp                  \
-	Timer.cpp                      \
-	TimerBind.cpp
+	IdleEvent.cpp                  
+#	Timer.cpp                      
+#	TimerBind.cpp                  
 
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
