--- a/src/core/Makefile_core_common
+++ b/src/core/Makefile_core_common
@@ -5,6 +5,7 @@ include $(TOP_DIR)/Makefile_filenames
 # subsys.o のある(subsys.oが作成される)サブディレクトリの定義
 
 SUBSYS_DIRS=\
+	$(CORE_DIR)/base/fs            \
 	$(CORE_DIR)/base/config        \
 	$(CORE_DIR)/base/cpu           \
 	$(CORE_DIR)/base/exception     \
@@ -15,7 +16,6 @@ SUBSYS_DIRS=\
 	$(CORE_DIR)/base/log           \
 	$(CORE_DIR)/base/script        \
 	$(CORE_DIR)/base/gc            \
-#	$(CORE_DIR)/base/fs            \
 #	$(CORE_DIR)/base/system        \
 #	$(CORE_DIR)/sound              
 
