--- a/src/core/main/Makefile
+++ b/src/core/main/Makefile
@@ -4,7 +4,7 @@ include $(CORE_DIR)/Makefile_core_common
 #----------------------------#
 
 # プログラムID (プログラムやライブラリのbasenameとなる)
-PROGRAM_ID=k3_core
+PROGRAM_ID=risa
 
 # 出力バイナリ名
 BIN=$(BUILD_OUT_DIR)/bin/$(PROGRAM_ID)$(BIN_SUFFIX)
