モジュールの定義を C++ から出来るように。
Stream の定義に、定数 (StreamConsts) モジュールを追加。

tFileSystem の定義は Risse スクリプトエンジンには必要ないので Risa に移動。

そのほか細かい修正。

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -63,6 +63,7 @@ CPPFILES =  \
 			src/risseLexerUtils.cpp                  \
 			src/risseMemberAttribute.cpp             \
 			src/risseMethod.cpp                      \
+			src/risseModule.cpp                      \
 			src/risseModuleClass.cpp                 \
 			src/risseNativeBinder.cpp                \
 			src/risseNumberClass.cpp                 \
