TmpFS の Risse バインディングを追加
そのほか細かいところ修正

--- a/src/core/base/fs/Makefile
+++ b/src/core/base/fs/Makefile
@@ -14,14 +14,14 @@ include $(CORE_DIR)/Makefile_core_subsys_pre
 #-----------------------------------------
 CPPFILES = \
 		common/FSManager.cpp                     \
-		osfs/OSFS.cpp                            
+		osfs/OSFS.cpp                            \
+		tmpfs/MemoryStream.cpp                   \
+		tmpfs/TmpFS.cpp                          
 
 #		common/FSManagerBind.cpp                 \
 #		osfs/OSFSBind.cpp                        \
 #		pathfs/PathFS.cpp                        \
 #		pathfs/PathFSBind.cpp                    \
-#		tmpfs/MemoryStream.cpp                   \
-#		tmpfs/TmpFS.cpp                          \
 #		tmpfs/TmpFSBind.cpp                      \
 #		xp4fs/DecompressedHolder.cpp             \
 #		xp4fs/XP4Archive.cpp                     \
