--- a/src/core/Makefile_core_common
+++ b/src/core/Makefile_core_common
@@ -6,6 +6,7 @@ include $(TOP_DIR)/Makefile_filenames
 
 SUBSYS_DIRS=\
 	$(CORE_DIR)/base/config        \
+	$(CORE_DIR)/base/system        \
 	$(CORE_DIR)/base/fs            \
 	$(CORE_DIR)/base/cpu           \
 	$(CORE_DIR)/base/exception     \
@@ -16,7 +17,6 @@ SUBSYS_DIRS=\
 	$(CORE_DIR)/base/log           \
 	$(CORE_DIR)/base/script        \
 	$(CORE_DIR)/base/gc            \
-#	$(CORE_DIR)/base/system        \
 #	$(CORE_DIR)/sound              
 
 # makefile のあるサブディレクトリの定義
