任意のアラインでアラインメントされたメモリブロックを割り当てる関数を追加

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -61,6 +61,7 @@ CPPFILES =  \
 			src/risseDateParser.cpp                  \
 			src/risseExceptionClass.cpp              \
 			src/risseFunctionClass.cpp               \
+			src/risseGC.cpp                          \
 			src/risseIntegerClass.cpp                \
 			src/risseLexerUtils.cpp                  \
 			src/risseMemberAttribute.cpp             \
