識別子管理用モジュールをくわえていろいろ調整
これから基本部分でコンパイルが通るようにする

--- a/src/core/visual/rina/Makefile
+++ b/src/core/visual/rina/Makefile
@@ -12,8 +12,7 @@ include $(CORE_DIR)/Makefile_core_subsys_pre
 # このディレクトリにあるソースファイルを列挙
 #-----------------------------------------
 CPPFILES=\
-	rinaGDS.cpp                   \
-	rinaProcess.cpp               \
+	rinaNode.cpp                  \
 	rinaProperty.cpp              \
 	rinaPin.cpp                   
 
