--- a/src/core/visual/rina/Makefile
+++ b/src/core/visual/rina/Makefile
@@ -14,7 +14,8 @@ include $(CORE_DIR)/Makefile_core_subsys_pre
 CPPFILES=\
 	rinaNode.cpp                  \
 	rinaProperty.cpp              \
-	rinaPin.cpp                   
+	rinaPin.cpp                   \
+	rinaIdRegistry.cpp            
 
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
